JumpScript/tests/baselines/reference/commaOperatorWithoutOperand.errors.txt
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(9,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(9,7): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(10,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(10,11): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(11,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(11,10): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(12,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(12,10): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(13,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(13,10): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(16,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(16,2): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(17,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(17,2): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(18,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(18,2): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(19,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(19,2): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(20,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(20,2): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(23,2): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(23,3): error TS1109: Expression expected.
tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump(23,5): error TS1109: Expression expected.


==== tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.jump (23 errors) ====
    var ANY: any;
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    var OBJECT: Object;
    
    // Expect to have compiler errors
    // Missing the second operand
    (ANY, );
     ~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
          ~
!!! error TS1109: Expression expected.
    (BOOLEAN, );
     ~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
              ~
!!! error TS1109: Expression expected.
    (NUMBER, );
     ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~
!!! error TS1109: Expression expected.
    (STRING, );
     ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~
!!! error TS1109: Expression expected.
    (OBJECT, );
     ~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~
!!! error TS1109: Expression expected.
    
    // Missing the first operand
    (, ANY);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
    (, BOOLEAN);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
    (, NUMBER);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
    (, STRING);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
    (, OBJECT);
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
     ~
!!! error TS1109: Expression expected.
    
    // Missing all operands
    ( , );
     
!!! error TS2695: Left side of comma operator is unused and has no side effects.
      ~
!!! error TS1109: Expression expected.
        ~
!!! error TS1109: Expression expected.